--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -13,47 +13,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Wf5KrEb6vrkR"
-      },
-      "source": [
-        "# Welcome to Colab!\n",
-        "\n",
-        "\n",
-        "## Access Popular LLMs via Google-Colab-AI Without an API Key\n",
-        "Users with Colab's paid plans have free access to most popular LLMs via google-colab-ai Python library. For more details, refer to the [getting started with google colab ai](https://colab.research.google.com/github/googlecolab/colabtools/blob/main/notebooks/Getting_started_with_google_colab_ai.ipynb).\n",
-        "\n",
-        "```\n",
-        "from google.colab import ai\n",
-        "response = ai.generate_text(\"What is the capital of France?\")\n",
-        "print(response)\n",
-        "```\n",
-        "\n",
-        "\n",
-        "## Explore the Gemini API\n",
-        "The Gemini API gives you access to Gemini models created by Google DeepMind. Gemini models are built from the ground up to be multimodal, so you can reason seamlessly across text, images, code, and audio.\n",
-        "\n",
-        "**How to get started?**\n",
-        "*  Go to [Google AI Studio](https://aistudio.google.com/) and log in with your Google account.\n",
-        "*  [Create an API key](https://aistudio.google.com/app/apikey).\n",
-        "* Use a quickstart for [Python](https://colab.research.google.com/github/google-gemini/cookbook/blob/main/quickstarts/Get_started.ipynb), or call the REST API using [curl](https://colab.research.google.com/github/google-gemini/cookbook/blob/main/quickstarts/rest/Prompting_REST.ipynb).\n",
-        "\n",
-        "**Discover Gemini's advanced capabilities**\n",
-        "*  Play with Gemini [multimodal outputs](https://colab.research.google.com/github/google-gemini/cookbook/blob/main/quickstarts/Image-out.ipynb), mixing text and images in an iterative way.\n",
-        "*  Discover the [multimodal Live API](https://colab.research.google.com/github/google-gemini/cookbook/blob/main/quickstarts/Get_started_LiveAPI.ipynb ) (demo [here](https://aistudio.google.com/live)).\n",
-        "*  Learn how to [analyze images and detect items in your pictures](https://colab.research.google.com/github/google-gemini/cookbook/blob/main/quickstarts/Spatial_understanding.ipynb\") using Gemini (bonus, there's a [3D version](https://colab.research.google.com/github/google-gemini/cookbook/blob/main/examples/Spatial_understanding_3d.ipynb) as well!).\n",
-        "*  Unlock the power of [Gemini thinking model](https://colab.research.google.com/github/google-gemini/cookbook/blob/main/quickstarts/Get_started_thinking.ipynb), capable of solving complex task with its inner thoughts.\n",
-        "      \n",
-        "**Explore complex use cases**\n",
-        "*  Use [Gemini grounding capabilities](https://colab.research.google.com/github/google-gemini/cookbook/blob/main/examples/Search_grounding_for_research_report.ipynb) to create a report on a company based on what the model can find on internet.\n",
-        "*  Extract [invoices and form data from PDF](https://colab.research.google.com/github/google-gemini/cookbook/blob/main/examples/Pdf_structured_outputs_on_invoices_and_forms.ipynb) in a structured way.\n",
-        "*  Create [illustrations based on a whole book](https://colab.research.google.com/github/google-gemini/cookbook/blob/main/examples/Book_illustration.ipynb) using Gemini large context window and Imagen.\n",
-        "\n",
-        "To learn more, check out the [Gemini cookbook](https://github.com/google-gemini/cookbook) or visit the [Gemini API documentation](https://ai.google.dev/docs/).\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Nma_JWh-W-IF"
       },
       "source": [
@@ -102,64 +61,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "gJr_9dXGpJ05",
-        "outputId": "c88cafe1-5df6-4842-b88f-6b67cdcbe80c",
+        "outputId": "647b4e11-2e0d-4369-b306-9aee88ec464f",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 111
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "unindent does not match any outer indentation level (<tokenize>, line 7)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    print: (1995, (\"1995  is not a key in birth_years.\"))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Google': 'chromeBook', 'Apple': 'MacBook', 'microsoft': 'surface pro'}\n"
           ]
         }
       ],
       "source": [
-        "birth_years = {1994: \"bill\", 1969: \"emily\", 1982: \"elizabeth\", 200: \"turner\"}\n",
-        "if 1995  in  birth_years:\n",
-        "  print (birth_years[1995])\n",
-        "else\n",
-        "  print (\"1995 is not a key in birth_years.\")\n",
+        "computers = {\"Google\": \"chromeBook\", \"Apple\": \"MacBook\", \"microsoft\": \"surface pro\"}\n",
         "\n",
-        " print: (1995, (\"1995  is not a key in birth_years.\"))"
+        "computers.setdefault(\"Apple\", \"MacBook pro\")\n",
+        "print(computers)"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 8,
+      "cell_type": "markdown",
       "metadata": {
-        "outputId": "f5be2e7a-1f59-46d7-886d-d5502692d5c0",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 111
-        },
-        "id": "sQGqs5I_pvqF"
+        "id": "2fhs6GZ4qFMx"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "unindent does not match any outer indentation level (<tokenize>, line 7)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    print: (1995, (\"1995  is not a key in birth_years.\"))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-          ]
-        }
-      ],
       "source": [
-        "birth_years = {1994: \"bill\", 1969: \"emily\", 1982: \"elizabeth\", 200: \"turner\"}\n",
-        "if 1995  in  birth_years:\n",
-        "  print (birth_years[1995])\n",
-        "else\n",
-        "  print (\"1995 is not a key in birth_years.\")\n",
+        "To execute the code in the above cell, select it with a click and then either press the play button to the left of the code, or use the keyboard shortcut \"Command/Ctrl+Enter\". To edit the code, just click the cell and start editing.\n",
         "\n",
-        " print: (1995, (\"1995  is not a key in birth_years.\"))"
+        "Variables that you define in one cell can later be used in other cells:"
       ]
     },
     {
@@ -390,36 +324,6 @@
         "- [Style Transfer](https://tensorflow.org/hub/tutorials/tf2_arbitrary_image_stylization): Use deep learning to transfer style between images.\n",
         "- [Multilingual Universal Sentence Encoder Q&A](https://tensorflow.org/hub/tutorials/retrieval_with_tf_hub_universal_encoder_qa): Use a machine learning model to answer questions from the SQuAD dataset.\n",
         "- [Video Interpolation](https://tensorflow.org/hub/tutorials/tweening_conv3d): Predict what happened in a video between the first and the last frame.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "10f2d342",
-        "outputId": "4e55bea8-58ca-496a-8ddb-44a2445e7e89"
-      },
-      "source": [
-        "birth_years = {1994: \"bill\",\n",
-        "               1969: \"emily\",\n",
-        "               1982: \"elizabeth\",\n",
-        "               2000: \"turner\"\n",
-        "}\n",
-        "\n",
-        "print (len(birth_years))\n",
-        "ex"
-      ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "4\n"
-          ]
-        }
       ]
     }
   ],
